syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.arpc.crypto.order";

package orderservice;
import "google/protobuf/timestamp.proto";

service OrderBookQueryService {
  rpc GetBestPrices(OrderSpreadRequest) returns (OrderSpreadResponse) {}
  rpc GetPriceStream(SymbolRequest) returns (stream OrderSpreadResponse) {}
}

message OrderSpreadRequest {
  string symbol = 1;
  google.protobuf.Timestamp start_timestamp = 2;
  google.protobuf.Timestamp end_timestamp = 3;
}

message OrderSpreadResponse {
  string symbol = 1;
  double best_bid_price = 2;
  double best_ask_price = 3;
}

message SymbolRequest {
  string symbol = 1;
}

